# api/app/Services/CircuitBreakerServerInterface.php
@@ -1,0 +1,8 @@
+<?php
+
+namespace App\Services;
+
+interface CircuitBreakerServerInterface
+{
+    public function isAuthServiceAvailable(int $timeout = null): bool;
+}
